fixing project pre tags on IE

--- a/docs/assets/project-page.css
+++ b/docs/assets/project-page.css
@@ -65,7 +65,7 @@ a { color: #101010; text-decoration: none }
 ul, ol { margin: 0.7em 0 0.7em 2em; }
   li { display: list-item; list-style: disc; }
   
-pre { border: 1px solid #e0e0e0; background-color: #000000; color: white; padding: 1em; font: 90% "Courier New", "Courier New", "Courier", monospace; margin: 1em 0; overflow: auto }
+pre { border: 1px solid #e0e0e0; background-color: #000000; color: white; padding: 1em; font: 90% "Courier New", "Courier New", "Courier", monospace; margin: 1em 0; overflow-x: auto; white-space: pre-wrap; white-space: -moz-pre-wrap !important; white-space: -pre-wrap; white-space: -o-pre-wrap; word-wrap: break-word; }
   pre .green { color: #00CC00; }
   pre .blue { color: #0000CC; }
   
